--- a/toD0ListProject/App_toDoList/templates/App_toDoList/show_impt.html
+++ b/toD0ListProject/App_toDoList/templates/App_toDoList/show_impt.html
@@ -30,7 +30,7 @@
                                 </div>
         
                                 <div class="col-md-1">
-                                    <a href="{% url 'delete_item' pk=item.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                                    <a href="{% url 'delete_item_from_impt' pk=item.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                                     <span class="glyphicon glyphicon-star"></span>
                                 </div>
         
@@ -48,7 +48,7 @@
                             </div>
 
                             <div class="col-md-1">
-                                <a href="{% url 'delete_item' pk=item.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                                <a href="{% url 'delete_item_from_impt' pk=item.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                                 <span class="glyphicon glyphicon-star"></span>
                             </div>
 
